# decentralized_threshold_signing_service

./: .dockerignore  .gitignore  Dockerfile  README.md  debug-test.js  docker-compose.yml  index.html  index.js  package-lock.json  package.json  playwright.config.js  relay.js  vite.config.js
config/: relay-peer-id.js  relay-peer-key.json
olaf/: Cargo.toml
olaf/src/: lib.rs
test/: crypto.spec.js  index.spec.js  polkadot-api.js  polkadot-round1-cache.json  wasm-integration.spec.js
