[package]
name = "olaf"
version = "0.1.0"
edition = "2024"

[lib]
# Enable building a wasm-compatible cdylib when targeting wasm
crate-type = ["rlib", "cdylib"]

[dependencies]
schnorrkel = { git = "https://github.com/Fiono11/schnorrkel" }
wasm-bindgen = { version = "0.2" }
js-sys = { version = "0.3" }
sp-core = { version = "34.0", default-features = false, features = ["full_crypto"] }
bs58 = { version = "0.5", default-features = false, features = ["alloc"] }
blake2 = { version = "0.10", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
sp-core = "34.0"
hex = "0.4"