[package]
name = "olaf"
version = "0.1.0"
edition = "2024"

[lib]
# Enable building a wasm-compatible cdylib when targeting wasm
crate-type = ["rlib", "cdylib"]

[dependencies]
schnorrkel = { path = "../../schnorrkel" }
wasm-bindgen = { version = "0.2.104" }
js-sys = { version = "0.3.81" }
bs58 = { version = "0.5.1", default-features = false, features = ["alloc"] }
blake2 = { version = "0.10.6", default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
sp-core = { version = "7.0.0", default-features = false, features = ["full_crypto"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.16", features = ["js"] }

[dev-dependencies]
hex = "0.4.3"
rand = "0.8.5"
hex-literal = "0.4.1"
curve25519-dalek = { version = "4.1.3", default-features = false, features = [
    "digest",
    "zeroize",
    "precomputed-tables",
    "legacy_compatibility",
    "rand_core",
] }